--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "secret_contract_template"
-version = "0.1.0"
+version = "1.0.0"
 authors = ["Lumi - Trivium"]
-edition = "2018"
+edition = "2021"
 
 exclude = [
   # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
@@ -30,25 +30,17 @@ overflow-checks = true
 default = []
 # for quicker tests, cargo test --lib
 # for more explicit tests, cargo test --features=backtraces
-backtraces = ["cosmwasm-std/backtraces"]
-debug-print = ["cosmwasm-std/debug-print"]
+#backtraces = ["cosmwasm-std/backtraces"]
+#debug-print = ["cosmwasm-std/debug-print"]
 
 [dependencies]
 snafu = { version = "0.6.3" }
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
-schemars = "0.7"
-cosmwasm-std = { version = "0.10", package = "secret-cosmwasm-std" }
-cosmwasm-storage = { version = "0.10", package = "secret-cosmwasm-storage" }
-secret-toolkit = "0.2.0"
-
-# Necessary for viewing keys
-base64 = "0.12.3"
-subtle = { version = "2.2.3", default-features = false }
-sha2 = { version = "0.9.1", default-features = false }
-rand_chacha = { version = "0.2.2", default-features = false }
-rand_core = { version =  "0.5.1", default-features = false }
-
-
+schemars = "0.8.8"
+cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm/", branch = "secret" }
+cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm/", branch = "secret" }
+secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit/", branch = "cosmwasm-v1.0", default-features = false, features = ["utils", "storage", "serialization", "viewing-key"] }
+thiserror = { version = "1.0.31" }
 
 [dev-dependencies]
-cosmwasm-schema = "0.10.1"
+cosmwasm-schema = { git = "https://github.com/scrtlabs/cosmwasm/", branch = "secret" }
