--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,9 +37,9 @@ default = []
 snafu = { version = "0.6.3" }
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 schemars = "0.8.8"
-cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm/", branch = "secret" }
-cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm/", branch = "secret" }
-secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit/", branch = "cosmwasm-v1.0", default-features = false, features = ["utils", "storage", "serialization", "viewing-key", "permit"] }
+cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.0.0" }
+cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.0.0" }
+secret-toolkit = { version = "0.6.0", default-features = false, features = ["utils", "storage", "serialization", "viewing-key", "permit"] }
 thiserror = { version = "1.0.31" }
 
 [dev-dependencies]
